--- a/mis_gastos/home/templates/main/home_main.html
+++ b/mis_gastos/home/templates/main/home_main.html
@@ -38,6 +38,7 @@
     
     <nav id="second_navbar_container">
         <img class="logo_contabiliapp" src="{% static 'logo_contabiliapp.png' %}" alt="imagen contabiliapp">
+        <input type="search" placeholder="¿Buscas algo?" id="Buscador" />
     </nav>
     {% block content %}
     
