--- a/mis_gastos/ahorros/static/styles/estilos_ahorros.css
+++ b/mis_gastos/ahorros/static/styles/estilos_ahorros.css
@@ -6,83 +6,15 @@
     --color5:black;
     --color6: white;
     --color7: #A72AAB;
+    --color8:whitesmoke;
 }
 
 body{
-    background-color:var(--color4);
+    background-color:var(--color8);
     width:95vw;
     padding:0;
-}
-
-.nav_container{
-    background-color:var(--color1);
-    color:var(--color5);
-    display: grid;
-    width:96vw;
-    height:70px;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
     margin:0;
 }
-
-
-.navbar li{
-    list-style: none;
-}
-
-
-.navbar a{
-    text-decoration:none;
-    color:var(--color6);
-    font-size:large;
-}
-
-.navbar a:hover{
-    color:var(--color3)
-}
-
-.li1{
-    grid-column:1/2;
-    grid-row: 2/3;
-    justify-self: center;
-    font-family: monospace;
-}
-
-.li2{
-    grid-column:2/3;
-    grid-row: 2/3;
-    justify-self: center;
-    font-family: monospace;
-}
-
-.li3{
-    grid-column:3/4;
-    grid-row: 2/3;
-    justify-self: center;
-    font-family: monospace;
-}
-
-.li4{
-    grid-column:4/5;
-    grid-row: 2/3;
-    justify-self: center;
-    font-family: monospace;
-}
-
-.li5{
-    grid-column:5/6;
-    grid-row: 2/3;
-    justify-self: center;
-    font-family: monospace;
-}
-
-.li6{
-    grid-column:6/7;
-    grid-row: 2/3;
-    justify-self: center;
-    font-family: monospace;
-}
-
 
 .contenido{
     margin-top:50px;
