--- a/mis_gastos/ahorros/templates/main/ahorros_main.html
+++ b/mis_gastos/ahorros/templates/main/ahorros_main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'styles/ahorros_navbar_styles.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/home_navbar_styles.css' %}">
     {% block link %}{% endblock link %}
     {% block title %}{% endblock title %}
 </head>
@@ -28,6 +28,10 @@
                 </div>
             </div>
         </ul>
+    </nav>
+    <nav id="second_navbar_container">
+        <img class="logo_contabiliapp" src="{% static 'logo_contabiliapp.png' %}" alt="imagen contabiliapp">
+        <input type="search" placeholder="¿Buscas algo?" id="Buscador" />
     </nav>
     
     {% block content %}
