--- a/mis_gastos/billetera/templates/main/billetera_main.html
+++ b/mis_gastos/billetera/templates/main/billetera_main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'styles/billetera_navbar_styles.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/home_navbar_styles.css' %}">
     {% block link %} {% endblock %}
     {% block title %} {% endblock %}
 </head>
@@ -26,7 +26,10 @@
             </div>
         </ul>
     </nav>
-    
+    <nav id="second_navbar_container">
+        <img class="logo_contabiliapp" src="{% static 'logo_contabiliapp.png' %}" alt="imagen contabiliapp">
+        <input type="search" placeholder="¿Buscas algo?" id="Buscador" />
+    </nav>
     {% block content %}
     
     {% endblock %}
