--- a/mis_gastos/home/static/styles/home_navbar_styles.css
+++ b/mis_gastos/home/static/styles/home_navbar_styles.css
@@ -129,12 +129,28 @@
     width:98vw;
     height:80px;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 25% 50% 25%;
+    grid-template-rows: 1fr 1fr 1fr;
     margin:0;
+    padding: 0;
 }
 
 .logo_contabiliapp{
     width:250px;
     height:80px;
+    grid-column:1/4;
+    grid-row:1/4;
     
+}
+
+/* Estilos buscador */
+#Buscador {
+    background: url(https://cdn0.iconfinder.com/data/icons/slim-square-icons-basics/100/basics-19-32.png) no-repeat 0px 5px;
+    background-size: 23px;
+    background-position: 0%;
+    width: 200px;
+    border: solid 1px #ccc;
+    padding: 10px 10px 10px 30px;
+    outline: none;
+    grid-column:7/8;
+    grid-row:2/3;
 }
