--- a/mis_gastos/home/templates/home.html
+++ b/mis_gastos/home/templates/home.html
@@ -25,22 +25,22 @@
             <h3 id="home_title2" class="home_title">Funcionalidades que te podemos ofrecer:</h3>
 
             <div id="card1">
-            <p id="home_paragraph1">Permite registrar y clasificar los ingresos, como salarios, intereses, alquileres, entre otros.</p>
+            <p id="home_paragraph1">Registrar tus ingresos (salarios, intereses, alquileres, entre otros).</p>
             <img id="image_card1" src="{% static 'image_card1.png' %}" alt="imagen_ahorros">
             </div>
 
             <div id="card2">
-            <p id="home_paragraph2">Permite registrar y clasificar los gastos, como facturas, compras, impuestos, entre otros.</p>
+            <p id="home_paragraph2">Registrar tus gastos (facturas, compras, impuestos, entre otros).</p>
             <img id="image_card2" src="{% static 'imagen_card2.png' %}" alt="imagen_ahorros">
             </div>
 
             <div id="card3">
-            <p id="home_paragraph3">Permite clasificar los ingresos y gastos en diferentes categorías, como alimentos, vivienda, transporte, entre otros.</p>
+            <p id="home_paragraph3">Clasificar los ingresos y gastos en diferentes categorías (alimentos, vivienda, transporte, entre otros).</p>
             <img id="image_card3" src="{% static 'image_card3.png' %}" alt="imagen_ahorros">
             </div>
 
             <div id="card4">
-            <p id="home_paragraph4">Permite la creación de ahorros los cuales pueden contener activos ó pasivos.</p>
+            <p id="home_paragraph4">Creación de ahorros y billeteras,con gastos e ingresos asociados.</p>
             <img id="image_card4" src="{% static 'image_card4.png' %}" alt="imagen_ahorros">
             </div>
 
